--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "jest": "^26.4.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-cloudwatch": "^1.100.0",
+    "@aws-cdk/aws-ec2": "^1.100.0",
+    "@aws-cdk/aws-ecs": "^1.100.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.100.0",
+    "@aws-cdk/aws-elasticache": "^1.100.0",
     "@aws-cdk/aws-s3": "^1.100.0",
     "@aws-cdk/core": "1.100.0"
   }
