--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@aws-cdk/aws-ecs-patterns": "^1.100.0",
     "@aws-cdk/aws-elasticache": "^1.100.0",
     "@aws-cdk/aws-s3": "^1.100.0",
-    "@aws-cdk/core": "1.100.0"
+    "@aws-cdk/core": "^1.100.0",
+    "crypto": "^1.0.1"
   }
 }
