--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@aws-cdk/assert": "^1.100.0",
     "aws-cdk": "1.100.0",
+    "jest": "^26.6.3",
     "tap": "^15.0.6"
   },
   "dependencies": {
