add extra npmignore items

--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,10 @@
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+# outputs file
+cdk-outputs.json
+
+# node tap testing files
+.nyc_output
+coverage
